# AIE2

./: .gitignore
01_Prototyping Best Practices & Vibe Check/: README.md
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb  ann_rag_pipeline_diagram  pyproject.toml
02_Embeddings_and_RAG/aimakerspace/: vectordatabase.py
02_Embeddings_and_RAG/aimakerspace/openai_utils/: chatmodel.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  Ollama_Setup_and_Testing.ipynb  practice.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  pyproject.toml
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  advanced_build.ipynb  pyproject.toml
